# Zerokan_qml

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
img/: rireki.xcf
include/: AccessSQL.h  BackGround.h  GameInfo.h  MainWindow.h  Setting.h  async_client.h  game_state.h  picojson.hpp  user.h
src/background/: BackGround.cpp  GameInfo.cpp  Setting.cpp  user.cpp
src/background/http/: async_client.cpp  damages.cpp  damages.h  game_state.cpp  hudmsg_reader.cpp  hudmsg_reader.h  ini_accessor.cpp  ini_accessor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  setting_form.cpp  setting_form.h  setting_form.ui  timer.cpp  timer.h  user.cpp  user.h
src/gui/: MainWindow.cpp  MainWindow.h  SettingForm.cpp  SettingForm.h  SettingForm.ui  mainwindow.ui  resultgraphform.cpp  resultgraphform.h  resultgraphform.ui
src/gui/qml/: Point.qml  PointForm.ui.qml
src/sql/: AccessSQL.cpp
test_data/: map_obj.json  mission.json
